<resources>
    <string name="app_name">SoundBliss</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Yes">Yes</string>
    <string name="No">No</string>

    <!-- Error Strings -->
    <string name="Error">Error</string>
    <string name="FailedToSavePost">Failed To Save Post</string>
    <string name="TryAgain">Try Again</string>
    <string name="fillMailField">Please fill mail field</string>
    <string name="provideValidEmail">Please provide a valid mail</string>
    <string name="errorEmail">Try again! Something wrong happened!</string>



    <!-- LogIn / Register Fields Strings -->
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="Nome">Nome</string>
    <string name="Cognome">Cognome</string>
    <string name="eMail">Mail</string>
    <string name="checkEmail">Check your email to reset your password</string>

    <!-- LogIn / Register Interface Strings -->
    <string name="Register">Register</string>
    <string name="LogIn">LogIn</string>
    <string name="backtoLogin">Back to LogIn</string>

    <!-- LogIn / Register Strings -->
    <string name="FillAllFields">Please fill all fields to continue</string>
    <string name="SuccessRegister">Successfully Registered</string>
    <string name="FailRegister">Registration Failed</string>
    <string name="LogInFailed">Log In Failed</string>

    <!-- Post -->
    <string name="Description">Description</string>
    <string name="FindOtherMusicians">Find Other Musicians</string>
    <string name="Post">Post</string>
    <string name="Gender">Gender</string>
    <string name="Title">Title</string>
    <string name="Location">Location</string>
    <string name="UploadTrack">Upload Track</string>
    <string name="ShareYourMusic">Share Your Music</string>
    <string name="DeletePost">Delete Post?</string>
    <string name="PostDeleted">Post Deleted</string>

    <string name="FillTitle">Please fill the title</string>
    <string name="FillGender">Please fill the gender</string>
    <string name="FillDescription">Please add a description</string>
    <string name="FillLocation">Please add a location</string>


    <!-- Profile -->
    <string name="EditProfile">Edit Your Profile</string>
    <string name="Posts">Posts</string>
    <string name="Followers">Followers</string>
    <string name="Following">Following</string>
    <string name="Contact">Contact</string>
    <string name="Message">Message</string>
    <string name="User">Username changed!</string>
    <string name="Pass">Password changed!</string>
    <string name="Bio">Description changed!</string>
    <string name="Email">Email changed!</string>

    <!-- Firebase database fields -->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>

    <!-- Google Maps -->
    <string name="map_key" translatable="false">AIzaSyCvdLhMZbFFpsEXCppxm_mD7Eqj4y4xin4</string>
    <string name="Instrument">Instrument</string>

    <string name="see_where">See Where</string>
    <string name="Request">Request</string>
    <string name="Search">Search</string>
    <string name="title_activity_messenger">MessengerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="play_track">Play Track</string>
    <string name="logout">LogOut</string>

    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="passwordResetInfo">Insert your mail, you\'ll receive an eMail to confirm your identity and reset your password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="call">Call</string>
    <string name="phone">Phone</string>
    <string name="phone_info">If you don\'t want your phone number to show up, then leave it blank, remember to add your local area code</string>
    <string name="delete_my_phone">Delete my Phone</string>
    <string name="phone_deleted">Phone Deleted</string>
    <string name="phone_updated">Phone Updated</string>
    <string name="sound_bliss">Sound Bliss</string>
    <string name="people">People</string>


</resources>