<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_800"
    android:padding="24dp"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="true"
        android:text="@string/LogIn"
        android:textColor="@color/white_100"
        android:textSize="36sp"
        android:layout_marginBottom="36dp"/>

    <EditText
        android:id="@+id/userField"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_box"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/eMail"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/white_100"
        android:textColorHint="@color/white_300" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/text_box"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/white_100"
        android:textColorHint="@color/white_300"
        android:layout_marginTop="4dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/text_box"
        android:text="@string/LogIn"
        android:textColor="@color/white_100"
        app:backgroundTint="@color/blue_100"
        app:cornerRadius="22dp" />

    <Button
        android:id="@+id/regButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/Register"
        android:textColor="@color/white_100"
        app:backgroundTint="@color/blue_500"
        app:cornerRadius="22dp" />





    <TextView
        android:id="@+id/passwordForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/blue_100" />


</LinearLayout>