<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.PasswordReset"
    android:orientation="vertical"
    android:padding="36dp"
    android:background="@color/blue_800"
    android:screenOrientation="portrait">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password Reset"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/white_100"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordResetInfo"
        android:layout_marginBottom="24dp"
        android:textColor="@color/white_100"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat"/>

    <EditText
        android:id="@+id/forgotPassMail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_box"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/eMail"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/white_100"
        android:textColorHint="@color/white_300" />

    <Button
        android:id="@+id/forgotPassSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_gravity="center"
        android:textColor="@color/white_100"
        app:backgroundTint="@color/blue_100"
        app:cornerRadius="22dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/forgotPassBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_gravity="center"
        android:textColor="@color/white_100"
        app:backgroundTint="@color/blue_500"
        app:cornerRadius="22dp"
        android:layout_marginTop="16dp"/>

</LinearLayout>