<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginRight="8dp"
            android:id="@+id/postRequestProfileImg"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/postRequestUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:layout_weight="1"
                android:text="username"
                android:textColor="@color/blue_100"/>

            <TextView
                android:id="@+id/postRequestRelativeTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="minutes ago"
                android:textColor="@color/white_100"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/postRequestTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="24dp"
            android:textColor="@color/blue_100"/>
        <TextView
            android:id="@+id/postRequestGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Gender"
            android:textColor="@color/white_100"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="16dp"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:id="@+id/postRequestDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Description"
            android:textColor="@color/white_100"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/postRequestLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_100"
            android:text="@string/Location"
            android:layout_marginBottom="8dp"/>

        <fragment
            android:id="@+id/postRequestMap"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:name="com.google.android.gms.maps.SupportMapFragment"/>

    </LinearLayout>
    <Button
        android:id="@+id/postRequestContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contact"
        android:textColor="@color/white_100"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"/>
</LinearLayout>