<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/ShareYourMusic"
        android:textSize="30sp"
        android:textColor="@color/white_100"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/uploadTrack"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UploadTrack"
        android:textColor="@color/white_100"
        android:background="@color/blue_100"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/trackName"
        android:visibility="gone"
        android:layout_marginBottom="8dp"
        android:textColor="@color/blue_100"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/trackPlayer"
        android:visibility="gone">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_play"
            android:id="@+id/btn_play"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_pause"
            android:id="@+id/btn_pause"
            android:visibility="gone"/>

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/seekBar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_position"
            android:text="00:00"
            android:textColor="@color/blue_100"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/slash"
            android:text="|"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/white_300"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_duration"
            android:text="00:00"
            android:textColor="@color/white_100"/>



    </LinearLayout>

    <EditText
        android:id="@+id/trackTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Title"
        android:textColorHint="@color/white_300"
        android:textColor="@color/white_100"/>

    <EditText
        android:id="@+id/trackGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Gender"
        android:textColorHint="@color/white_300"
        android:textColor="@color/white_100"/>

    <com.hendraanggrian.appcompat.widget.SocialAutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/Description"
        android:maxLines="5"
        android:id="@+id/trackDescription"
        app:socialFlags="hashtag|mention"
        app:hashtagColor="@color/blue_100"
        android:textColorHint="@color/white_300"
        android:textColor="@color/white_100"/>

</LinearLayout>