<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_border"
            android:padding="70dp">


            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/backArrow"
                android:text="Edit Profile"
                android:textColor="@color/blue_800"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/saveChanges"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="35dp"
                android:src="@drawable/ic_check"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_photo"
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:src="@drawable/settings_icon"
                app:civ_border_color="@color/blue_800"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/changeProfilePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_photo"
                android:layout_centerHorizontal="true"
                android:text="Change Photo"
                android:textColor="@color/blue_100"
                android:textSize="16sp" />


            <!-- username section -->
            <RelativeLayout
                android:id="@+id/relLayout1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/changeProfilePhoto"
                android:layout_marginTop="80dp"
                android:background="@drawable/text_box"
                android:paddingRight="10dp"
                android:paddingLeft="10dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_person" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@null"
                    android:hint="@string/Username"
                    android:textColorHint="@color/white_300"
                    android:textColor="@color/white_100"
                    android:inputType="textNoSuggestions" />

            </RelativeLayout>


            <!-- display_name section -->
            <RelativeLayout
                android:id="@+id/relLayout2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout1"
                android:layout_marginTop="15dp"
                android:background="@drawable/text_box"
                android:paddingRight="10dp"
                android:paddingLeft="10dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_descript" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@null"
                    android:hint="description"
                    android:textColor="@color/white_100"
                    android:textColorHint="@color/white_300"
                    android:inputType="textNoSuggestions" />

            </RelativeLayout>



            <!-- password section -->
            <RelativeLayout
                android:id="@+id/relLayout3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout2"
                android:layout_marginTop="15dp"
                android:background="@drawable/text_box"
                android:paddingRight="10dp"
                android:paddingLeft="10dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_key" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@null"
                    android:hint="@string/Password"
                    android:textColor="@color/white_100"
                    android:textColorHint="@color/white_300"
                    android:inputType="textPassword" />

            </RelativeLayout>


            <!-- email section -->
            <RelativeLayout
                android:id="@+id/relLayout5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout3"
                android:layout_marginTop="15dp"
                android:background="@drawable/text_box"
                android:paddingRight="10dp"
                android:paddingLeft="10dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_mail" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@null"
                    android:hint="@string/eMail"
                    android:textColor="@color/white_100"
                    android:textColorHint="@color/white_300"
                    android:inputType="textNoSuggestions" />



            </RelativeLayout>


        </RelativeLayout>


    </ScrollView>

</merge>